HIVE-29417: Basic Iceberg table MSCK repair